# apub-lite

./: .env  .gitignore  .sqruff  Cargo.toml  Dockerfile  README.md  compose.yaml  justfile  rust-toolchain.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: action_lint.yaml  dependabot_auto_merge.yaml  pull_request.yaml
crates/apub-activitypub/: Cargo.toml
crates/apub-activitypub/src/: activity_json.rs  core.rs  jrd.rs  lib.rs  model.rs  shared.rs  webfinger.rs
crates/apub-activitypub/src/core/: activity.rs  actor.rs  object.rs
crates/apub-activitypub/src/model/: acct_uri.rs  activity.rs  actor.rs  collection.rs  context.rs  key.rs  note.rs  person.rs  webfinger.rs
crates/apub-activitypub/src/model/activity/: accept.rs  create.rs  follow.rs  undo.rs
crates/apub-activitypub/src/webfinger/: acct_uri.rs  resolve.rs  webfinger_object.rs
crates/apub-adapter/: Cargo.toml
crates/apub-adapter/migrations/: 20241114191440_init.down.sql  20241114191440_init.up.sql  20241117052555_add_users_rsa_key.down.sql  20241117052555_add_users_rsa_key.up.sql
crates/apub-adapter/src/: model.rs  persistence.rs  repository.rs
crates/apub-adapter/src/model/: actor.rs  follower.rs  note.rs  rsa_key.rs  user.rs
crates/apub-adapter/src/persistence/: http_client.rs  postgres.rs
crates/apub-adapter/src/repository/: activity.rs  actor.rs  follower.rs  note.rs  rsa_key.rs  user.rs  webfinger.rs
crates/apub-adapter/src/repository/fixtures/: actors.sql  users.sql
crates/apub-api/: Cargo.toml
crates/apub-api/src/: app_state.rs  handler.rs  lib.rs  route.rs
crates/apub-api/src/handler/: inbox.rs  person.rs  webfinger.rs
crates/apub-api/src/route/: person.rs  send_note.rs  user_inbox.rs  webfinger.rs
crates/apub-config/: Cargo.toml
crates/apub-config/src/: lib.rs
crates/apub-kernel/: Cargo.toml
crates/apub-kernel/src/: lib.rs  model.rs  prelude.rs  repository.rs
crates/apub-kernel/src/activitypub/: activity.rs  actor.rs  mod.rs  model.rs  repository.rs  service.rs
crates/apub-kernel/src/follower/: model.rs  repository.rs
crates/apub-kernel/src/model/: activity.rs  rsa_key.rs  user.rs
crates/apub-kernel/src/note/: model.rs  repository.rs
crates/apub-kernel/src/repository/: activity.rs  rsa_key.rs
crates/apub-kernel/src/rsa_key/: model.rs  repository.rs
crates/apub-kernel/src/user/: model.rs  repository.rs  service.rs
crates/apub-registry/: Cargo.toml
crates/apub-registry/src/: lib.rs
crates/apub-shared/: Cargo.toml
crates/apub-shared/src/: config.rs  lib.rs  model.rs
crates/apub-shared/src/model/: id.rs  resource_uri.rs  resource_url.rs  uri_id.rs
crates/apub-tracing/: Cargo.toml
crates/apub-tracing/src/: lib.rs
src/: lib.rs  main.rs  model.rs  registry.rs  shared.rs  tracing.rs
src/adapter/: user.rs
src/api/handler/: webfinger.rs
src/api/route/: webfinger.rs
src/model/: acct_uri.rs  resource_uri.rs  user.rs  webfinger.rs
src/repository/: users.rs
src/shared/: config.rs
src/tracing/: init.rs
