[package]
name = "apub-lite"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
  "crates/apub-activitypub",
  "crates/apub-adapter",
  "crates/apub-api",
  "crates/apub-kernel",
  "crates/apub-registry",
  "crates/apub-shared",
  "crates/apub-tracing",
]

[workspace.dependencies]
apub-activitypub = { path = "crates/apub-activitypub" }
apub-adapter = { path = "crates/apub-adapter" }
apub-api = { path = "crates/apub-api" }
apub-kernel = { path = "crates/apub-kernel" }
apub-registry = { path = "crates/apub-registry" }
apub-shared = { path = "crates/apub-shared" }
apub-tracing = { path = "crates/apub-tracing" }

axum = { version = "0.7", features = ["tracing", "macros"] }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6.1", features = ["trace", "normalize-path"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "macros",
  "postgres",
  "migrate",
] }

async-trait = { version = "0.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }

anyhow = { version = "1.0.89", features = ["backtrace"] }
thiserror = { version = "2" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3.0", features = ["json", "env-filter"] }
typed-builder = "0.20.0"

pretty_assertions = { version = "1" }
rstest = { version = "0.23" }

[dependencies]
apub-activitypub = { workspace = true }
apub-adapter = { workspace = true }
apub-api = { workspace = true }
apub-kernel = { workspace = true }
apub-registry = { workspace = true }
apub-shared = { workspace = true }
apub-tracing = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
