[package]
edition = "2021"
name = "apub-lite"
version = "0.1.0"

[workspace]
members = [
  "crates/apub-activitypub",
  "crates/apub-adapter",
  "crates/apub-api",
  "crates/apub-config",
  "crates/apub-kernel",
  "crates/apub-registry",
  "crates/apub-shared",
  "crates/apub-tracing",
]

[workspace.dependencies]
apub-activitypub = { path = "crates/apub-activitypub" }
apub-adapter = { path = "crates/apub-adapter" }
apub-api = { path = "crates/apub-api" }
apub-config = { path = "crates/apub-config" }
apub-kernel = { path = "crates/apub-kernel" }
apub-registry = { path = "crates/apub-registry" }
apub-shared = { path = "crates/apub-shared" }
apub-tracing = { path = "crates/apub-tracing" }

axum = { version = "0.7", features = ["tracing", "macros"] }
mime = { version = "0.3" }
tokio = { version = "1", features = ["full"] }
tower = { version = "0.5" }
tower-http = { version = "0.6.7", features = ["trace", "normalize-path"] }

sqlx = { version = "0.8", features = [
  "runtime-tokio",
  "tls-native-tls",
  "macros",
  "uuid",
  "postgres",
  "migrate",
] }

base64 = { version = "0.22" }
rand = "0.8.5"
rsa = { version = "0.9.9", features = ["pem", "sha2"] }
sha2 = { version = "0.10.9" }
uuid = { version = "1.11.1", features = [
  "v4",
  "v7",
  "serde",
  "macro-diagnostics",
] }

async-trait = { version = "0.1" }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_with = { version = "3.11" }

httpdate = { version = "1.0.3" }
reqwest = { version = "0.12", features = ["json"] }
url = { version = "2.5.7", features = ["serde"] }

anyhow = { version = "1.0.100", features = ["backtrace"] }
thiserror = { version = "2" }
tracing = { version = "0.1", features = [
  "max_level_trace",
  "release_max_level_debug",
] }
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter"] }
typed-builder = "0.20.1"

pretty_assertions = { version = "1" }
rstest = { version = "0.23" }

[dependencies]
apub-activitypub = { workspace = true }
apub-adapter = { workspace = true }
apub-api = { workspace = true }
apub-config = { workspace = true }
apub-kernel = { workspace = true }
apub-registry = { workspace = true }
apub-shared = { workspace = true }
apub-tracing = { workspace = true }

anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
