[package]
edition = "2021"
name = "apub-activitypub"
version = "0.1.0"

[dependencies]
apub-shared = { workspace = true }

async-trait = { workspace = true }
axum = { workspace = true }
mime = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
