[package]
edition = "2021"
name = "apub-adapter"
version = "0.1.0"

[dependencies]
apub-kernel = { workspace = true }
apub-shared = { workspace = true }

sqlx = { workspace = true }

axum = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

pretty_assertions = { workspace = true }
rstest = { workspace = true }
tracing = { workspace = true }
