[package]
edition = "2021"
name = "apub-adapter"
version = "0.1.0"

[dependencies]
apub-activitypub = { workspace = true }
apub-kernel = { workspace = true }
apub-shared = { workspace = true }

sqlx = { workspace = true }

axum = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

base64 = { workspace = true }
httpdate = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
typed-builder = { workspace = true }

[dev-dependencies]
pretty_assertions = { workspace = true }
rstest = { workspace = true }
