[package]
name = "apub-api"
version = "0.1.0"
edition = "2021"

[dependencies]
apub-activitypub = { workspace = true }
apub-kernel = { workspace = true }
apub-registry = { workspace = true }
apub-shared = { workspace = true }

axum = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

pretty_assertions = { workspace = true }
rstest = { workspace = true }

tracing = { workspace = true }
