[package]
edition = "2021"
name = "apub-kernel"
version = "0.1.0"

[dependencies]
apub-activitypub = { workspace = true }
apub-shared = { workspace = true }

axum = { workspace = true }

anyhow = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

rand = { workspace = true }
rsa = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }

pretty_assertions = { workspace = true }
rstest = { workspace = true }
