[package]
edition = "2021"
name = "apub-shared"
version = "0.1.0"

[dependencies]
axum = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
typed-builder = { workspace = true }

uuid = { workspace = true }

pretty_assertions = { workspace = true }
rstest = { workspace = true }
