[package]
edition = "2021"
name = "apub-shared"
version = "0.1.0"

[dependencies]
axum = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

url = { workspace = true }
uuid = { workspace = true }

pretty_assertions = { workspace = true }
rstest = { workspace = true }
